Skip GUI tests on Linux (headless)